# ASR_VAD

./: dataset.py  eval.py  execute_vad.py  execute_vad2.py  main.py  model-big.jit  multi_scale_ori.py  save_model_jit.py  train_offtime.py  train_realtime_add.py
model/: multi_scale_ori.py
result/: load_mat.ipynb
tools/: pre_vad.py  resample.py
tools/vad_tools/: CMakeLists.txt  README.md  execute.py  log4c.h  main_segment_audio.c  main_test.c  online_vad.c  online_vad.h  test.sh
tools/vad_tools/conf/: conf.json
vad_to_cpp/: CMakeLists.txt  build.sh  example_torch  readme  test_vad.cpp
vad_to_cpp/libtorch/: build-version
vad_to_cpp/libtorch/include/caffe2/core/: macros.h
weights2/: 1000.ckpt  10000.ckpt  10500.ckpt  11000.ckpt  11500.ckpt  12000.ckpt  12500.ckpt  13000.ckpt  13500.ckpt  14000.ckpt  14500.ckpt  1500.ckpt  15000.ckpt  15500.ckpt  16000.ckpt  16500.ckpt  17000.ckpt  17500.ckpt  18000.ckpt  18500.ckpt  2000.ckpt  2500.ckpt  3000.ckpt  3500.ckpt  4000.ckpt  4500.ckpt  500.ckpt  5000.ckpt  5500.ckpt  6000.ckpt  6500.ckpt  7000.ckpt  7500.ckpt  8000.ckpt  8500.ckpt  9000.ckpt  9500.ckpt
